# enterprise_rag

./: .gitignore  README.md  pyproject.toml
examples/demo-repo/: README.md  auth_service.py  pyproject.toml
examples/demo-repo/tests/: test_auth_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
reports/: sample-report.md  terminal-run-log.txt
src/codeorbit/: __init__.py  api.py  cli.py  llm.py  models.py  reporting.py  scanner.py  service.py  storage.py
tests/: test_scanner.py  test_service.py
