[project]
name = "mimo-codeorbit"
version = "0.1.0"
description = "Repository-level AI coding assistant for Xiaomi MiMo Orbit applications."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "typer>=0.12.0",
  "pydantic>=2.7.0",
]

[project.scripts]
mimo-codeorbit = "codeorbit.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
